--- a/sobre.html
+++ b/sobre.html
@@ -39,8 +39,8 @@
 
                 <!-- Dropdown -->
                 <ul id="dropdown-menu" class="dropdown-content">
-                    <li><a href="#" class="black-text">Entrar</a></li>
-                    <li><a href="#" class="black-text">Registrar</a></li>
+                    <li><a href="alunos.html" class="black-text">Entrar</a></li>
+                    <li><a href="alunos.html" class="black-text">Registrar</a></li>
                 </ul>
             </div>
         </nav>
@@ -140,8 +140,8 @@
                     <ul>
                         <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="sobre.html">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="#">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="#">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="alunos.html">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="alunos.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
