--- a/alunos.html
+++ b/alunos.html
@@ -91,11 +91,11 @@
 
                     </div>
 
-                    <div class="col s3 m3 l3 center-align">
+                    <div class="col s2 m3 l3 center-align">
                         <h5>Foto</h5>
                     </div>
 
-                    <div class="col s3 m3 l3 center-align">
+                    <div class="col s2 m3 l3 center-align">
                         <h5>Nome</h5>
                     </div>
 
@@ -103,8 +103,11 @@
                         <h5>Telefone</h5>
                     </div>
 
-                    <div class="col s3 m3 l3 center-align">
+                    <div class="col s2 m3 l3 center-align">
                         <h5>Presença</h5>
+                    </div>
+                    <div class="col s12 m3 l3 center-align listaAluno">
+                        <p>TODOS ALUNOS</p>
                     </div>
 
                 </div>
@@ -116,19 +119,19 @@
     <div class="container " id="alunosAtivos">
         <div>
             <div class="row">
-                <div class="col s3 m3 l3 center-align">
+                <div class="col s12 m3 l3 center-align">
                     <img class="responsive-img " src="img/avatar.png" alt="avatar do usuario">
                 </div>
 
-                <div class="col s3 m3 l3 center-align">
+                <div class="col s12 m3 l3 center-align">
                     <p>José</p>
                 </div>
 
-                <div class="col s3 m3 l3 center-align">
+                <div class="col s12 m3 l3 center-align">
                     <p>0800545145</p>
                 </div>
 
-                <div class="col s3 m3 l3 center-align">
+                <div class="col s12 m3 l3 center-align">
                     <form action="#">
                         <p>
                             <label>
@@ -138,7 +141,7 @@
                         </p>
                     </form>
                 </div>
-                <div class="col l3 m2 s3">
+                <div class="col l12 m12 s12 center-align">
                     <button>REMOVER ALUNO</button>
                 </div>
             </div>
