--- a/crie.html
+++ b/crie.html
@@ -45,7 +45,7 @@
     </ul>
 
     <!-- TITULO -->
-    <div class="col s11 m6 l5">
+    <div class="col s12 m6 l5 center-align">
         <h1>CRIE</h1>
     </div>
 
