--- a/sobre.html
+++ b/sobre.html
@@ -50,8 +50,8 @@
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="#" class="black-text">Entrar</a></li>
-        <li><a href="#" class="black-text">Registrar</a></li>
+        <li><a href="alunos.html" class="black-text">Entrar</a></li>
+        <li><a href="alunos.html" class="black-text">Registrar</a></li>
     </ul>
 
 
