removendo titulos e alteranda nav

--- a/controle.html
+++ b/controle.html
@@ -31,7 +31,7 @@
                     <li><a href="index.html" class="black-text">Home</a></li>
                     <li><a href="alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="crie.html" class="black-text">Crie</a></li>
-                    <li><a href="controle.html" class="black-text">Controle</a></li>
+                    <li><a href="controle.html" class="orange-text">Controle</a></li>
                     <li><a href="treino.html" class="black-text">Treino</a></li>
                 </ul>
             </div>
@@ -43,14 +43,10 @@
         <li><a href="index.html" class="black-text">Home</a></li>
         <li><a href="alunos.html" class="black-text">Alunos</a></li>
         <li><a href="crie.html" class="black-text">Crie</a></li>
-        <li><a href="controle.html" class="black-text">Controle</a></li>
+        <li><a href="controle.html" class="orange-text">Controle</a></li>
         <li><a href="treino.html" class="black-text">Treino</a></li>
     </ul>
 
-    <!-- TITULO -->
-    <div class="col s12 m6 l5 ">
-        <h1>CONTROLE</h1>
-    </div>
 
     <!-- ALUNOS -->
     <div class="container">
