--- a/crie.html
+++ b/crie.html
@@ -27,7 +27,7 @@
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="index.html" class="black-text">Home</a></li>
                     <li><a href="alunos.html" class="black-text">Alunos</a></li>
-                    <li><a href="crie.html" class="black-text">Crie</a></li>
+                    <li><a href="crie.html" class="orange-text">Crie</a></li>
                     <li><a href="controle.html" class="black-text">Controle</a></li>
                     <li><a href="treino.html" class="black-text">Treino</a></li>
                 </ul>
@@ -39,15 +39,11 @@
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="index.html" class="black-text">Home</a></li>
         <li><a href="alunos.html" class="black-text">Alunos</a></li>
-        <li><a href="crie.html" class="black-text">Crie</a></li>
+        <li><a href="crie.html" class="orange-text">Crie</a></li>
         <li><a href="controle.html" class="black-text">Controle</a></li>
         <li><a href="treino.html" class="black-text">Treino</a></li>
     </ul>
 
-    <!-- TITULO -->
-    <div class="col s12 m6 l5 center-align">
-        <h1>CRIE</h1>
-    </div>
 
     <!-- CALENDARIO -->
     <div id="calendario">
