--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="index.html" class="black-text">Home</a></li>
+                    <li><a href="index.html" class="orange-text">Home</a></li>
                     <li><a href="sobre.html" class="black-text">Sobre</a></li>
                     <li>
                         <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
@@ -40,7 +40,7 @@
 
                 <!-- Dropdown -->
                 <ul id="dropdown-menu" class="dropdown-content">
-                    <li><a href="alunos.html" class="black-text">Entrar</a></li>
+                    <li><a href="alunos.html" class="orange-text">Entrar</a></li>
                     <li><a href="alunos.html" class="black-text">Registrar</a></li>
                 </ul>
             </div>
