--- a/sobre.html
+++ b/sobre.html
@@ -29,7 +29,7 @@
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="index.html" class="black-text">Home</a></li>
-                    <li><a href="sobre.html" class="black-text">Sobre</a></li>
+                    <li><a href="sobre.html" class="orange-text">Sobre</a></li>
                     <li>
                         <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
               Entrar <i class="material-icons right">arrow_drop_down</i>
@@ -49,7 +49,7 @@
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="index.html">Início</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="sobre.html" class="orange-text">Sobre</a></li>
         <li><a href="alunos.html" class="black-text">Entrar</a></li>
         <li><a href="alunos.html" class="black-text">Registrar</a></li>
     </ul>
