--- a/treino.html
+++ b/treino.html
@@ -32,7 +32,7 @@
                     <li><a href="alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="crie.html" class="black-text">Crie</a></li>
                     <li><a href="controle.html" class="black-text">Controle</a></li>
-                    <li><a href="treino.html" class="black-text">Treino</a></li>
+                    <li><a href="treino.html" class="orange-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,13 +44,9 @@
         <li><a href="alunos.html" class="black-text">Alunos</a></li>
         <li><a href="crie.html" class="black-text">Crie</a></li>
         <li><a href="controle.html" class="black-text">Controle</a></li>
-        <li><a href="treino.html" class="black-text">Treino</a></li>
+        <li><a href="treino.html" class="orange-text">Treino</a></li>
     </ul>
 
-    <!-- TITULO -->
-    <div class="col s11 m6 l5 titulo">
-        <h1>TREINO</h1>
-    </div>
 
     <!-- FOOTER -->
     <footer class="page-footer" id="footer">
