--- a/alunos.html
+++ b/alunos.html
@@ -29,7 +29,7 @@
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="index.html" class="black-text">Home</a></li>
-                    <li><a href="alunos.html" class="black-text">Alunos</a></li>
+                    <li><a href="alunos.html" class="orange-text">Alunos</a></li>
                     <li><a href="crie.html" class="black-text">Crie</a></li>
                     <li><a href="controle.html" class="black-text">Controle</a></li>
                     <li><a href="treino.html" class="black-text">Treino</a></li>
@@ -41,16 +41,12 @@
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="index.html" class="black-text">Home</a></li>
-        <li><a href="alunos.html" class="black-text">Alunos</a></li>
+        <li><a href="alunos.html" class="orange-text">Alunos</a></li>
         <li><a href="crie.html" class="black-text">Crie</a></li>
         <li><a href="controle.html" class="black-text">Controle</a></li>
         <li><a href="treino.html" class="black-text">Treino</a></li>
     </ul>
 
-    <!-- TITULO -->
-    <div class="col s11 m6 l5 titulo">
-        <h1>ALUNOS</h1>
-    </div>
 
     <!-- Alunos -->
     <div class="container">
