alterando nav da pg index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <!-- Dropdown -->
                 <ul id="dropdown-menu" class="dropdown-content">
-                    <li><a href="alunos.html" class="orange-text">Entrar</a></li>
+                    <li><a href="alunos.html" class="black-text">Entrar</a></li>
                     <li><a href="alunos.html" class="black-text">Registrar</a></li>
                 </ul>
             </div>
@@ -49,8 +49,8 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="index.html">Início</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="index.html" class="orange-text">Home</a></li>
+        <li><a href="sobre.html" class="black-text">Sobre</a></li>
         <li><a href="alunos.html" class="black-text">Entrar</a></li>
         <li><a href="alunos.html" class="black-text">Registrar</a></li>
     </ul>
