--- a/sobre.html
+++ b/sobre.html
@@ -75,57 +75,231 @@
 
 
     <div id="time">
-        <div class="container">
-            <div class="row">
-                <div class="col s12 m6 l6 center-align">
-                    <a href="https://github.com/rafalmeida73">
-                        <img class="responsive-img" src="img/rafael.jpg" alt="">
-                        <p>Rafael Santana</p>
-                        <span>Sei lá</span>
-                    </a>
-                    <br>
-                    <br>
+        <div class="row ">
+            <div class="container">
+                <div class="col s12 m6 l6">
+                    <div id="profile-card" class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="img/8.png" alt="user bg">
+                        </div>
+                        <div class="card-content">
+                            <img src="img/roni.png" alt="" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
+                                <i class="material-icons">edit</i>
+                            </a>
+                            <span class="card-title activator grey-text text-darken-4">Rony Cleber</span>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Scrum Master</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Rony Cleber
+                      <i class="material-icons right">close</i>
+                    </span>
+                            <p>Mais informações.</p>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Scrum Master</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                            <p>
+                            </p>
+                            <p>
+                                <i class="material-icons">airplanemode_active</i> Brasil
+                            </p>
+                            <p>
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col s12 m6 l6 center-align">
-                    <a href="https://github.com/ronycleber">
-                        <img class="responsive-img" src="img/roni.png" alt="">
-                        <p>Roni Cleber</p>
-                        <span>Sei lá</span>
-                    </a>
-                    <br>
-                    <br>
+
+                <div class="col s12 m6 l6">
+                    <div id="profile-card" class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="img/8.png" alt="user bg">
+                        </div>
+                        <div class="card-content">
+                            <img src="img/rafael.jpg" alt="" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
+                                <i class="material-icons">edit</i>
+                            </a>
+                            <span class="card-title activator grey-text text-darken-4">Rafael Santana</span>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Rafael Santana
+                      <i class="material-icons right">close</i>
+                    </span>
+                            <p>Mais informações.</p>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com
+                            </p>
+                            <p>
+                            </p>
+                            <p>
+                                <i class="material-icons">airplanemode_active</i> Brasil
+                            </p>
+                            <p>
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col s12 m6 l6 center-align">
-                    <a href="https://github.com/pauloernestom">
-                        <img class="responsive-img" src="img/paulo.png" alt="">
-                        <p>Paulo Ernesto</p>
-                        <span>Sei lá</span>
-                    </a>
-                    <br>
-                    <br>
+
+                <div class="col s12 m6 l6">
+                    <div id="profile-card" class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="img/8.png" alt="user bg">
+                        </div>
+                        <div class="card-content">
+                            <img src="img/paulo.png" alt="" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
+                                <i class="material-icons">edit</i>
+                            </a>
+                            <span class="card-title activator grey-text text-darken-4">Paulo Ernesto</span>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Paulo Ernesto
+                      <i class="material-icons right">close</i>
+                    </span>
+                            <p>Mais informações.</p>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com
+                            </p>
+                            <p>
+                            </p>
+                            <p>
+                                <i class="material-icons">airplanemode_active</i> Brasil
+                            </p>
+                            <p>
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col s12 m6 l6 center-align">
-                    <a href="https://github.com/Dogix11">
-                        <img class="responsive-img" src="img/diogo.png" alt="">
-                        <p>Diogo</p>
-                        <span>Sei lá</span>
-                    </a>
-                    <br>
-                    <br>
+
+                <div class="col s12 m6 l6">
+                    <div id="profile-card" class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="img/8.png" alt="user bg">
+                        </div>
+                        <div class="card-content">
+                            <img src="img/diogo.png" alt="" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
+                                <i class="material-icons">edit</i>
+                            </a>
+                            <span class="card-title activator grey-text text-darken-4">Diogo</span>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Diogo
+                      <i class="material-icons right">close</i>
+                    </span>
+                            <p>Mais informações.</p>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com
+                            </p>
+                            <p>
+                            </p>
+                            <p>
+                                <i class="material-icons">airplanemode_active</i> Brasil
+                            </p>
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <!-- BOTAO -->
+        <div class="container center-align" id="tituloBtn">
+            <h2>Faça parte da nossa equipe!</h2>
+        </div>
+
+
+
+
+
+        <div class="container" id="form">
+            <div class="col s12 m12 l6">
+                <div>
+                    <div class="row">
+                        <form class="col s12">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <i class="material-icons prefix">account_circle</i>
+                                    <input id="name" type="text" class="validate">
+                                    <label for="first_name">Nome</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <i class="material-icons prefix">email</i>
+                                    <input id="email" type="email" class="validate">
+                                    <label for="email">Email</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <i class="material-icons prefix">archive</i>
+                                    <input id="password" type="file" class="validate">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <i class="material-icons prefix">question_answer</i>
+                                    <textarea id="message" class="materialize-textarea validate" length="120"></textarea>
+                                    <label for="message">Menssagem</label>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <button class="btn waves-effect waves-light right orange" type="submit" name="action">Enviar
+                      <i class="material-icons right">send</i>
+                    </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    </div>
 
-    <!-- BOTAO -->
-    <div class="container center-align" id="tituloBtn">
-        <h2>Junte-se à nossa equipe!</h2>
-    </div>
-    <div class="container" id="btn">
-        <div class="col s12 m5 l4 center-align">
-            <button>Fazer parte da equipe</button>
-        </div>
-    </div>
 
 
     <!-- FOOTER -->
@@ -145,7 +319,7 @@
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up"><img src="img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
