--- a/financas.html
+++ b/financas.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Controle</title>
+    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
+    <title>Finanças</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./css/financas.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./css/controle.css">
 </head>
 
 <body>
-
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
@@ -48,40 +47,113 @@
     </ul>
 
 
-    <!-- ALUNOS -->
-    <div class="container">
-        <a href="alunos.html">
-            <div class="quadrado">
-                <div class="row square" id="alunos">
-                    <div class="col s12 m12 l6 ">
-                        <h2>1<br> Alunos ativos</h2>
+    <div class="row" id="grafico">
+        <div class="col s12 m12 l8">
+            <canvas id="myChart" width="400" height="300"></canvas>
+        </div>
+
+        <div class="col s12 m12 l4">
+            <div class="cards">
+
+                <div class="card">
+                    <div>
+                        <i class="material-icons background-round mt-5">attach_money</i>
                     </div>
-                    <div class="col s12 m12 l6 ">
-                        <img class="responsive-img" src="img/user.png" alt="alunos ativos">
+                    <div class="right-align">
+                        <h5 class="white-text">R$ 8.900,00</h5>
+                        <p class="white-text">Total</p>
+                    </div>
+                </div>
+                <div class="card2">
+                    <div>
+                        <i class="material-icons background-round mt-5">timeline</i>
+                    </div>
+                    <div class="right-align">
+                        <h5 class="white-text">%10</h5>
+                        <p class="white-text">Crescimento</p>
                     </div>
                 </div>
             </div>
-        </a>
+        </div>
     </div>
 
-    <!-- PAGAMENTOS -->
-    <div class="container">
-        <a href="financas.html">
-            <div class="quadrado2">
-                <div class="row square" id="alunos">
-                    <div class="col s12 m12 l6 ">
-                        <h2>Pagamentos</h2>
+    <div class="container" id="lista">
+        <div class="#ffffff white" style="border-bottom: 2px solid black;">
+            <div class="row">
+
+                <div>
+
+                    <div class="col s12 m12 l12 left-align">
+                        <p>Alunos</p>
+
+                        <div class="nav-wrapper">
+                            <form>
+                                <div class="input-field">
+                                    <input id="search" type="search" required placeholder="Pesquisar">
+                                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                                    <i class="material-icons">close</i>
+                                </div>
+                            </form>
+                        </div>
+
                     </div>
-                    <div class="col s12 m12 l6 ">
-                        <img class="responsive-img" src="img/money.png" alt="Pagamentos">
+
+                    <div class="col s2 m3 l3 center-align">
+                        <h5>Foto</h5>
                     </div>
-                    <div class="col s12 m12 l12 right-align baixoQuadrado">
-                        <p>1 PAGAMENTO PENDENTE</p>
+
+                    <div class="col s2 m3 l3 center-align">
+                        <h5>Nome</h5>
                     </div>
+
+                    <div class="col s3 m3 l3 center-align">
+                        <h5>Telefone</h5>
+                    </div>
+
+                    <div class="col s2 m3 l3 center-align">
+                        <h5>Pagamento</h5>
+                    </div>
+                    <div class="col s12 m3 l3 center-align listaAluno">
+                        <p>TODOS ALUNOS</p>
+                    </div>
+
                 </div>
             </div>
-        </a>
+        </div>
     </div>
+
+    <div class="container " id="alunosAtivos">
+        <div>
+            <div class="row">
+                <div class="col s12 m3 l3 center-align">
+                    <img class="responsive-img " src="img/avatar.png" alt="avatar do usuario">
+                </div>
+
+                <div class="col s12 m3 l3 center-align">
+                    <p>José</p>
+                </div>
+
+                <div class="col s12 m3 l3 center-align">
+                    <p>0800545145</p>
+                </div>
+
+                <div class="col s12 m3 l3 center-align">
+                    <form action="#">
+                        <p>
+                            <label>
+                        <input type="checkbox" />
+                        <span class="black-text">Pago</span>
+                      </label>
+                        </p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
 
     <!-- FOOTER -->
@@ -114,13 +186,12 @@
         </div>
     </footer>
 
-
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/topo.js"></script>
+    <script src="./js/finacas.js"></script>
 </body>
 
 </html>
