--- a/treino.html
+++ b/treino.html
@@ -59,10 +59,9 @@
                 <div class="col l4 offset-l2 s12">
                     <ul>
                         <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="alunos.html">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="crie.html">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="controle.html">Controle</a></li>
-                        <li><a class="white-text text-lighten-3" href="treino.html">Treino</a></li>
+                        <li><a class="white-text text-lighten-3" href="sobre.html">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="alunos.html">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="alunos.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
