Pagina de login e cadastro da aplicação

--- a/sobre.html
+++ b/sobre.html
@@ -32,15 +32,15 @@
                     <li><a href="sobre.html" class="orange-text">Sobre</a></li>
                     <li>
                         <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
-              Entrar <i class="material-icons right">arrow_drop_down</i>
-            </a>
+                            Entrar <i class="material-icons right">arrow_drop_down</i>
+                        </a>
                     </li>
                 </ul>
 
                 <!-- Dropdown -->
                 <ul id="dropdown-menu" class="dropdown-content">
-                    <li><a href="alunos.html" class="black-text">Entrar</a></li>
-                    <li><a href="alunos.html" class="black-text">Registrar</a></li>
+                    <li><a href="login.html" class="black-text">Entrar</a></li>
+                    <li><a href="cadastro.html" class="black-text">Registrar</a></li>
                 </ul>
             </div>
         </nav>
@@ -50,8 +50,8 @@
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html" class="orange-text">Sobre</a></li>
-        <li><a href="alunos.html" class="black-text">Entrar</a></li>
-        <li><a href="alunos.html" class="black-text">Registrar</a></li>
+        <li><a href="login.html" class="black-text">Entrar</a></li>
+        <li><a href="cadastro.html" class="black-text">Registrar</a></li>
     </ul>
 
 
@@ -59,7 +59,8 @@
     <div id="sobre">
         <div class="row">
             <div class="col s12 m6 l6">
-                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do aplicativo Strava do seus alunos, marcar aulas, ter um gestão dos seus pagamentos, entre outros. Tudo isso apenas em um só lugar.</p>
+                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do aplicativo Strava do seus alunos, marcar aulas, ter um gestão dos seus pagamentos, entre outros. Tudo isso apenas em um só lugar.
+                </p>
             </div>
             <div class="col s12 m6 l6">
                 <img class="responsive-img" src="img/atividades.png" alt="">
@@ -97,8 +98,8 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Rony Cleber
-                      <i class="material-icons right">close</i>
-                    </span>
+                                <i class="material-icons right">close</i>
+                            </span>
                             <p>Mais informações.</p>
                             <p>
                                 <i class="material-icons">perm_identity</i>Scrum Master</p>
@@ -137,8 +138,8 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Rafael Santana
-                      <i class="material-icons right">close</i>
-                    </span>
+                                <i class="material-icons right">close</i>
+                            </span>
                             <p>Mais informações.</p>
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
@@ -178,8 +179,8 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Paulo Ernesto
-                      <i class="material-icons right">close</i>
-                    </span>
+                                <i class="material-icons right">close</i>
+                            </span>
                             <p>Mais informações.</p>
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
@@ -219,8 +220,8 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Diogo
-                      <i class="material-icons right">close</i>
-                    </span>
+                                <i class="material-icons right">close</i>
+                            </span>
                             <p>Mais informações.</p>
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
@@ -287,8 +288,8 @@
                                 <div class="row">
                                     <div class="input-field col s12">
                                         <button class="btn waves-effect waves-light right orange" type="submit" name="action">Enviar
-                      <i class="material-icons right">send</i>
-                    </button>
+                                            <i class="material-icons right">send</i>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -314,8 +315,8 @@
                     <ul>
                         <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="sobre.html">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="alunos.html">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="alunos.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="login.html">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="cadastro.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
@@ -326,7 +327,8 @@
         <div class="footer-copyright">
             <div class="container white-text">
                 © 2020 High Performance Copyright
-                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
+                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
+                    LogoMakr.com</a>
             </div>
         </div>
     </footer>
