Arrumando banner e nav

--- a/index.html
+++ b/index.html
@@ -31,18 +31,10 @@
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="index.html" class="orange-text">Home</a></li>
                     <li><a href="sobre.html" class="black-text">Sobre</a></li>
-                    <li>
-                        <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
-                            Entrar <i class="material-icons right">arrow_drop_down</i>
-                        </a>
-                    </li>
-                </ul>
-
-                <!-- Dropdown -->
-                <ul id="dropdown-menu" class="dropdown-content">
                     <li><a href="login.html" class="black-text">Entrar</a></li>
                     <li><a href="cadastro.html" class="black-text">Registrar</a></li>
                 </ul>
+
             </div>
         </nav>
     </div>
@@ -62,7 +54,7 @@
         </div>
         <div class="col s12 m6 l7">
             <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+            <p class="right-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
             </p>
             <button>Saber mais</button>
         </div>
@@ -277,11 +269,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/topo.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('.carousel').carousel();
-        });
-    </script>
+    <script src="./js/carrousel.js"></script>
 
 </body>
 
