--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
             <p class="right-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
             </p>
-            <button>Saber mais</button>
+            <a href="sobre.html">Saber mais</a>
         </div>
     </div>
 
@@ -88,7 +88,7 @@
                 <h6>COMECE <span>AGORA</span> A USAR<br> O <span>HIGH PERFORMANCE</span></h6>
                 <p class="right-align">Cadastre-se<br> e comece a usar!</p>
             </div>
-            <button>Se inscrever</button>
+            <a href="cadastro.html">Se inscrever</a>
         </div>
         <div class="col s12 m12 l7 left-align">
             <img class="responsive-img" src="img/ilustracao.png" alt="">
