Arrumando pagina crie e adicionando alt nas imagen

--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
     <div class="logout">
         <div class="row">
             <div class="col s12 m6 l5" id="cadastroContainer">
-                <img class="responsive-img logo" src="img/logo.png" alt="">
+                <img class="responsive-img logo" src="img/logo.png" alt="High Performance">
                 <h1>Cadastro</h1>
 
                 <p>Faça seu cadastro, entre na plataforma e monitore seus alunos.</p>
