--- a/controle.html
+++ b/controle.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="High Performance" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
