--- a/crie.html
+++ b/crie.html
@@ -81,17 +81,27 @@
     <div class="container " id="alunosAtivos">
         <div>
             <div class="row">
-                <div class="col s4 m4 l4 center-align">
+                <div class="col s12 m3 l3 center-align">
                     <img class="responsive-img " src="img/avatar.png" alt="avatar do usuario">
                 </div>
 
-                <div class="col s4 m4 l4 center-align">
+                <div class="col s12 m3 l3 center-align">
+                    <p>José Santos</p>
+                </div>
+
+                <div class="col s12 m3 l3 center-align">
                     <p>Aula de musculação</p>
                 </div>
 
-                <div class="col s4 m4 l4 center-align">
+
+                <div class="col s6 m2 l2 center-align">
                     <p>Horario: 8:30</p>
                 </div>
+
+                <div class="col s6 m1 l1 center-align">
+                    <i class="material-icons prefix tooltipped" data-position="bottom" data-tooltip="Enviar SMS">contact_mail</i>
+                </div>
+
                 <div class="col s12 m4 l12 right-align">
                     <button>REMOVER ALUNO</button>
                 </div>
@@ -125,7 +135,8 @@
         <div class="footer-copyright">
             <div class="container white-text">
                 © 2020 High Performance Copyright
-                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
+                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
+                    LogoMakr.com</a>
             </div>
         </div>
     </footer>
