--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
     <!-- BENEFICIOS -->
     <div class="row" id="beneficios">
         <div class="col s12 m12 l4 center-align">
-            <img class="responsive-img" src="img/qualidade.png" alt="">
+            <img class="responsive-img" src="img/qualidade.png" alt="Serviços">
             <h4 class="center-align">SERVIÇO DE QUALIDADE</h4>
             <p class="center-align">No High Performance, você pode experimentar o melhor nível de serviço ao cliente.
             </p>
         </div>
         <div class="col s12 m12 l4  center-align">
-            <img class="responsive-img" src="img/gestao.png" alt="">
+            <img class="responsive-img" src="img/gestao.png" alt="Gestão">
             <h4 class="center-align">GESTÃO COMPLETA</h4>
             <p class="center-align">Tenha um controle de fluxo de caixa organizado, acessos administrativos e outros funcionalidades.
             </p>
         </div>
         <div class="col s12 m12 l4 center-align">
-            <img class="responsive-img" src="img/alunos.png" alt="">
+            <img class="responsive-img" src="img/alunos.png" alt="Alunos">
             <h4 class="center-align">FICHA DOS ALUNOS</h4>
             <p class="center-align">Tenha uma ficha completa dos seus alunos com integração na API do Strava.</p>
         </div>
@@ -91,7 +91,7 @@
             <a href="cadastro.html">Se inscrever</a>
         </div>
         <div class="col s12 m12 l7 left-align">
-            <img class="responsive-img" src="img/ilustracao.png" alt="">
+            <img class="responsive-img" src="img/ilustracao.png" alt="Ilustração">
         </div>
     </div>
 
