--- a/sobre.html
+++ b/sobre.html
@@ -54,7 +54,7 @@
                 </p>
             </div>
             <div class="col s12 m6 l6">
-                <img class="responsive-img" src="img/atividades.png" alt="">
+                <img class="responsive-img" src="img/atividades.png" alt="Ilustração">
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@
                             <img class="activator" src="img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/roni.png" alt="" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">edit</i>
                             </a>
@@ -115,7 +115,7 @@
                             <img class="activator" src="img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/rafael.jpg" alt="" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">edit</i>
                             </a>
@@ -156,7 +156,7 @@
                             <img class="activator" src="img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/paulo.png" alt="" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="img/paulo.png" alt="Paulo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">edit</i>
                             </a>
@@ -197,7 +197,7 @@
                             <img class="activator" src="img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/diogo.png" alt="" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">edit</i>
                             </a>
