Adicionando animação na pagina home

--- a/index.html
+++ b/index.html
@@ -90,14 +90,17 @@
             </div>
             <a href="cadastro.html">Se inscrever</a>
         </div>
+
         <div class="col s12 m12 l7 left-align">
-            <img class="responsive-img" src="img/ilustracao.png" alt="Ilustração">
+            <img src="img/ilustracao.svg" alt="Ilustracao" class="responsive-img">
         </div>
     </div>
 
     <!-- FORUM -->
     <div class="container center-align" id="tituloCarrosel">
-        <h2>DEPOIMENTOS</h2>
+        <div class="col s12 m12 l12">
+            <h2>DEPOIMENTOS</h2>
+        </div>
     </div>
     <div class="carousel" id="carrossel">
         <a class="carousel-item center-align" href="#one!">
