Trocando imagem sobre

--- a/sobre.html
+++ b/sobre.html
@@ -54,7 +54,7 @@
                 </p>
             </div>
             <div class="col s12 m6 l6">
-                <img class="responsive-img" src="img/atividades.png" alt="Ilustração">
+                <img class="responsive-img" src="img/bike.svg" alt="Ilustração">
             </div>
         </div>
     </div>
@@ -75,67 +75,27 @@
                             <img class="activator" src="img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">edit</i>
+                                <i class="material-icons">add</i>
                             </a>
-                            <span class="card-title activator grey-text text-darken-4">Rony Cleber</span>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Scrum Master</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text">GitHub</a></p>
-                            <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Rony Cleber
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Mais informações.</p>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Scrum Master</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text">GitHub</a></p>
-                            <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
-                            <p>
-                            </p>
-                            <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
-                            </p>
-                            <p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l6">
-                    <div id="profile-card" class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="img/8.png" alt="user bg">
-                        </div>
-                        <div class="card-content">
-                            <img src="img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
-                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">edit</i>
-                            </a>
-                            <span class="card-title activator grey-text text-darken-4">Rafael Santana</span>
+                            <span class="card-title activator grey-text text-darken-4">Diogo</span>
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com</p>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Rafael Santana
+                            <span class="card-title grey-text text-darken-4">Diogo
                                 <i class="material-icons right">close</i>
                             </span>
                             <p>Mais informações.</p>
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com
                             </p>
@@ -158,13 +118,13 @@
                         <div class="card-content">
                             <img src="img/paulo.png" alt="Paulo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">edit</i>
+                                <i class="material-icons">add</i>
                             </a>
                             <span class="card-title activator grey-text text-darken-4">Paulo Ernesto</span>
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com</p>
                         </div>
@@ -176,7 +136,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com
                             </p>
@@ -197,30 +157,70 @@
                             <img class="activator" src="img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">edit</i>
+                                <i class="material-icons">add</i>
                             </a>
-                            <span class="card-title activator grey-text text-darken-4">Diogo</span>
+                            <span class="card-title activator grey-text text-darken-4">Rafael Santana</span>
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com</p>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Diogo
+                            <span class="card-title grey-text text-darken-4">Rafael Santana
                                 <i class="material-icons right">close</i>
                             </span>
                             <p>Mais informações.</p>
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com
                             </p>
+                            <p>
+                            </p>
+                            <p>
+                                <i class="material-icons">airplanemode_active</i> Brasil
+                            </p>
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m6 l6">
+                    <div id="profile-card" class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="img/8.png" alt="user bg">
+                        </div>
+                        <div class="card-content">
+                            <img src="img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
+                                <i class="material-icons">add</i>
+                            </a>
+                            <span class="card-title activator grey-text text-darken-4">Rony Cleber</span>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Scrum Master</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Rony Cleber
+                                <i class="material-icons right">close</i>
+                            </span>
+                            <p>Mais informações.</p>
+                            <p>
+                                <i class="material-icons">perm_identity</i>Scrum Master</p>
+                            <p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank">GitHub</a></p>
+                            <p>
+                                <i class="material-icons">email</i> yourmail@domain.com</p>
                             <p>
                             </p>
                             <p>
@@ -291,6 +291,7 @@
         </div>
     </div>
     </div>
+
 
 
 
