--- a/treino.html
+++ b/treino.html
@@ -48,6 +48,10 @@
     </ul>
 
 
+
+    <div class="col s12 m12 l4">
+        <img src="img/atividades.png" alt="atividades" lass="responsive-img">
+    </div>
     <!-- FOOTER -->
     <footer class="page-footer" id="footer">
         <div class="container">
